--- a/build.gradle
+++ b/build.gradle
@@ -37,6 +37,8 @@ dependencies {
     runtimeOnly 'com.h2database:h2'
     runtimeOnly 'com.mysql:mysql-connector-j'
     implementation 'org.mybatis.spring.boot:mybatis-spring-boot-starter:3.0.1'
+    implementation group: 'org.bgee.log4jdbc-log4j2', name:'log4jdbc-log4j2-jdbc4.1', version: '1.16'
+
 //    implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
 }
 
