--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -3,3 +3,21 @@ spring.thymeleaf.cache=false
 spring.thymeleaf.check-template-location=true
 spring.thymeleaf.prefix=classpath:/templates/
 spring.thymeleaf.suffix=.html
+
+server.port=7001
+#spring.datasource.url=jdbc:mysql://123.143.84.28:7102/scmProject
+spring.datasource.url=jdbc:log4jdbc:mysql://123.143.84.28:7102/scmProject
+spring.datasource.username=root
+spring.datasource.password=Rowemtest1!
+#spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+spring.datasource.driver-class-name=net.sf.log4jdbc.sql.jdbcapi.DriverSpy
+
+mybatis.mapper-locations=classpath:mapper/**.xml
+
+
+logging.level.jdbc.sqlonly=info
+logging.level.jdbc.sqltiming=info
+logging.level.jdbc.resultsettable=info
+logging.level.jdbc.audit=off
+logging.level.jdbc.resultset=off
+logging.level.jdbc.connection=off
