--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -4,7 +4,6 @@ spring.thymeleaf.check-template-location=true
 spring.thymeleaf.prefix=classpath:/templates/
 spring.thymeleaf.suffix=.html
 
-server.port=7001
 #spring.datasource.url=jdbc:mysql://123.143.84.28:7102/scmProject
 spring.datasource.url=jdbc:log4jdbc:mysql://123.143.84.28:7102/scmProject
 spring.datasource.username=root
@@ -16,7 +15,7 @@ mybatis.mapper-locations=classpath:mapper/**.xml
 
 
 logging.level.jdbc.sqlonly=info
-logging.level.jdbc.sqltiming=info
+logging.level.jdbc.sqltiming=off
 logging.level.jdbc.resultsettable=info
 logging.level.jdbc.audit=off
 logging.level.jdbc.resultset=off
