--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,8 +1,12 @@
 spring.thymeleaf.enabled=true
-spring.thymeleaf.cache=false
 spring.thymeleaf.check-template-location=true
+spring.thymeleaf.cache=false
 spring.thymeleaf.prefix=classpath:/templates/
 spring.thymeleaf.suffix=.html
+
+#spring.thymeleaf.cache=false
+#spring.thymeleaf.prefix=file:///$PROJECT_DIR$/src/main/resources/templates/
+#spring.web.resources.static-locations=file:///$PROJECT_DIR$/src/main/resources/static/
 
 #spring.datasource.url=jdbc:mysql://123.143.84.28:7102/scmProject
 spring.datasource.url=jdbc:log4jdbc:mysql://123.143.84.28:7102/scmProject
