--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -24,3 +24,6 @@ logging.level.jdbc.resultsettable=info
 logging.level.jdbc.audit=off
 logging.level.jdbc.resultset=off
 logging.level.jdbc.connection=off
+
+
+spring.datasource.tomcat.connection-properties=zeroDateTimeBehavior=convertToNull;
