--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -18,9 +18,9 @@ spring.datasource.driver-class-name=net.sf.log4jdbc.sql.jdbcapi.DriverSpy
 mybatis.mapper-locations=classpath:mapper/**.xml
 
 
-logging.level.jdbc.sqlonly=info
+logging.level.jdbc.sqlonly=off
 logging.level.jdbc.sqltiming=off
-logging.level.jdbc.resultsettable=info
+logging.level.jdbc.resultsettable=off
 logging.level.jdbc.audit=off
 logging.level.jdbc.resultset=off
 logging.level.jdbc.connection=off
