--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -8,17 +8,17 @@ spring.thymeleaf.suffix=.html
 #spring.thymeleaf.prefix=file:///$PROJECT_DIR$/src/main/resources/templates/
 #spring.web.resources.static-locations=file:///$PROJECT_DIR$/src/main/resources/static/
 
-#spring.datasource.url=jdbc:mysql://123.143.84.28:7102/scmProject
-#spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
-spring.datasource.url=jdbc:log4jdbc:mysql://123.143.84.28:7102/scmProject
-spring.datasource.driver-class-name=net.sf.log4jdbc.sql.jdbcapi.DriverSpy
+spring.datasource.url=jdbc:mysql://123.143.84.28:7102/scmProject
+spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+#spring.datasource.url=jdbc:log4jdbc:mysql://123.143.84.28:7102/scmProject
+#spring.datasource.driver-class-name=net.sf.log4jdbc.sql.jdbcapi.DriverSpy
 spring.datasource.username=root
 spring.datasource.password=Rowemtest1!
 
 mybatis.mapper-locations=classpath:mapper/**.xml
 
 
-logging.level.jdbc.sqlonly=info
+logging.level.jdbc.sqlonly=off
 logging.level.jdbc.sqltiming=off
 logging.level.jdbc.resultsettable=off
 logging.level.jdbc.audit=off
