controller와 restcontroller 분리중

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -18,6 +18,9 @@ spring.datasource.password=Rowemtest1!
 mybatis.mapper-locations=classpath:mapper/**.xml
 
 
+#spring.jpa.hibernate.ddl-auto=create
+spring.jpa.database-platform=org.hibernate.dialect.MySQL8Dialect
+
 logging.level.jdbc.sqlonly=off
 logging.level.jdbc.sqltiming=off
 logging.level.jdbc.resultsettable=off
